network.yml

Description: You'll need to create a Launch Configuration for your application servers 
  in order to deploy four servers, two located in each of your private subnets. The launch 
  configuration will be used by an auto-scaling group. You'll need two vCPUs and at least 
  4GB of RAM. The Operating System to be used is Ubuntu 18. So, choose an Instance size 
  and Machine Image (AMI) that best fits this spec. Be sure to allocate at least 10GB of 
  disk space so that you don't run into issues.

Parameters:
  EnvironmentName:
      Description: This name will be prefixed to all the resources.
      Type: String
  VpcCIDR:
      Description: CIDR for Udagram App VPC
      Type: String
      Default: 10.0.0.0/16
  PublicSubnet1CIDR:
      Description: CIDR for Udagram App Public Subnet 1
      Type: String
      Default: 10.0.0.0/24
  PublicSubnet2CIDR:
      Description: CIDR for Udagram App Public Subnet 2
      Type: String
      Default: 10.0.1.0/24
  PrivateSubnet1CIDR:
      Description: CIDR for Udagram App Private Subnet 1
      Type: String
      Default: 10.0.2.0/24
  PrivateSubnet2CIDR:
      Description: CIDR for Udagram App Private Subnet 2
      Type: String
      Default: 10.0.3.0/24

Resources:

  ## VPC ##
  VPC:
      Type: AWS::EC2::VPC
      Properties:
          CidrBlock: !Ref VpcCIDR
          EnableDnsHostnames: true
          Tags:
              - Key: Name
                Value: !Ref EnvironmentName

  ## Internet Gateway ##
  InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
          Tags:
              - Key: Name
                Value: !Ref EnvironmentName

  # Attachment of Internet Gateway to VPC
  InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC

  ## Subnets ##
  PublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [0, !GetAZs ""]
          CidrBlock: !Ref PublicSubnet1CIDR
          MapPublicIpOnLaunch: true
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [1, !GetAZs ""]
          CidrBlock: !Ref PublicSubnet2CIDR
          MapPublicIpOnLaunch: true
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [0, !GetAZs ""]
          CidrBlock: !Ref PrivateSubnet1CIDR
          MapPublicIpOnLaunch: false
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [1, !GetAZs ""]
          CidrBlock: !Ref PrivateSubnet2CIDR
          MapPublicIpOnLaunch: false
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  ## Network Address Translation (NAT) Gateways ##
  NatGateway1EIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGatewayAttachment
      Properties:
          Domain: vpc

  NatGateway2EIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGatewayAttachment
      Properties:
          Domain: vpc

  NatGateway1:
      Type: AWS::EC2::NatGateway
      Properties:
          AllocationId: !GetAtt NatGateway1EIP.AllocationId
          SubnetId: !Ref PublicSubnet1

  NatGateway2:
      Type: AWS::EC2::NatGateway
      Properties:
          AllocationId: !GetAtt NatGateway2EIP.AllocationId
          SubnetId: !Ref PublicSubnet2

  ## Routing Configuration ##
  PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
          VpcId: !Ref VPC
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
      Type: AWS::EC2::Route
      DependsOn: InternetGatewayAttachment
      Properties:
          RouteTableId: !Ref PublicRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties:
          VpcId: !Ref VPC
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  DefaultPrivateRoute1:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateRouteTable1
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateRouteTable1
          SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
      Type: AWS::EC2::RouteTable
      Properties:
          VpcId: !Ref VPC
          Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Routes (AZ2)

  DefaultPrivateRoute2:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateRouteTable2
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateRouteTable2
          SubnetId: !Ref PrivateSubnet2

Outputs:
  VPC:
      Description: A reference to the created VPC
      Value: !Ref VPC
      Export:
          Name: !Sub ${EnvironmentName}-VPCID

  VPCPublicRouteTable:
      Description: Public Routing
      Value: !Ref PublicRouteTable
      Export:
          Name: !Sub ${EnvironmentName}-PUB-RT

  VPCPrivateRouteTable01:
      Description: Private Routing to AZ-1
      Value: !Ref PrivateRouteTable1
      Export:
          Name: !Sub ${EnvironmentName}-PRI-RT01

  VPCPrivateRouteTable02:
      Description: Private Routing to AZ-2
      Value: !Ref PrivateRouteTable2
      Export:
          Name: !Sub ${EnvironmentName}-PRI-RT02

  PublicSubnets:
      Description: A list of the public subnets 
      Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
      Export:
          Name: !Sub ${EnvironmentName}-PUB-NETS

  PublicSubnet01:
      Description: A reference to the public subnet in AZ-1
      Value: !Ref PublicSubnet1
      Export:
          Name: !Sub ${EnvironmentName}-PUB-SN01

  PublicSubnet02:
      Description: A reference to the public subnet in AZ-2
      Value: !Ref PublicSubnet2
      Export:
          Name: !Sub ${EnvironmentName}-PUB-SN02

  PrivateSubnets:
      Description: A list of the private subnets 
      Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
      Export:
          Name: !Sub ${EnvironmentName}-PRI-NETS

  PrivateSubnet01:
      Description: A reference to the private subnet in AZ-1
      Value: !Ref PrivateSubnet1
      Export:
          Name: !Sub ${EnvironmentName}-PRI-SN01

  PrivateSubnet02:
      Description: A reference to the private subnet in AZ-2
      Value: !Ref PrivateSubnet2
      Export:
          Name: !Sub ${EnvironmentName}-PRI-SN02
